fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   position: relative;
   color: #000000;
   opacity: 0;
-  font-size: 20vh;
+  font-size: 10vw;
   white-space: nowrap;
 }
 
@@ -25,7 +25,7 @@ body {
   color: white;
   left: 40%;
   opacity: 0;
-  font-size: 20vh;
+  font-size: 10vw;
   white-space: nowrap;
 }
 
